# spider2-gui

./: .gitignore  BUILD_AND_DEPLOY.md  CMakeLists.txt  CMakePresets.json  MainSimple.qml  MessageTypes.hpp  PROTOCOL_COMPLIANCE_REVIEW.md  README.md  TelemetryDisplay.qml  archive_deployment.bat  build.bat  build.sh  build_debug.bat  command.proto  conan_miraspec_auth.bat  conanfile.txt  deploy.bat  main.cpp  pull_deps_debug.bat  qtcreator_setup.bat
deploy/qml/: LidarDisplay.qml  Main.qml  MainSimple.qml
deploy/translations/: qt_de.qm
from_server/: PROTOCOL.md  command.proto
res/qml/: ArtificialHorizon.qml  ConnectionDialog.qml  DataIndicators.qml  DataStreamIndicator.qml  GyroDisplay.qml  LidarDisplay.qml  Main.qml  MainSimple.qml  MapDisplay.qml  SensorDataDisplay.qml
src/: GyroController.cpp  GyroController.h  GyroDataModel.cpp  GyroDataModel.h  LidarController.cpp  LidarController.h  LidarDataModel.cpp  LidarDataModel.h  MapProvider.cpp  MapProvider.h  MessageTypes.hpp  RobotController.cpp  RobotController.h  SlamController.cpp  SlamController.h  VideoProvider.cpp  VideoProvider.h  command.proto  main.cpp
